--- a/src/main.css
+++ b/src/main.css
@@ -19,7 +19,18 @@ body {
   padding: unset;
 }
 
-[data-role="ufi_layer"] {
+ufi-slide-preload-container {
+  width: 0;
+  height: 0;
+  visibility: hidden;
+  z-index: -1;
+}
+
+ufi-layer-cotainer {
+  display: contents;
+}
+
+ufi-layer {
   position: absolute;
   top: 0;
   right: 0;
@@ -29,36 +40,36 @@ body {
   padding: unset;
 }
 
-[data-role="ufi_layer"].left-half {
+ufi-layer.left-half {
   right: 50%;
 }
 
-[data-role="ufi_layer"].right-half {
+ufi-layer.right-half {
   left: 50%;
 }
 
-[data-role="ufi_layer"].top-half {
+ufi-layer.top-half {
   bottom: 50%;
 }
 
-[data-role="ufi_layer"].bottom-half {
+ufi-layer.bottom-half {
   top: 50%;
 }
 
-[data-role="ufi_slide"] {
+ufi-slide {
   width: 100%;
   height: 100%;
   margin: unset;
   padding: unset;
 }
 
-[data-role="ufi_slide"].image > img {
+ufi-slide.image > img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-[data-role="ufi_slide"].html > iframe {
+ufi-slide.html > iframe {
   width: 100%;
   height: 100%;
   border: none;
