--- a/src/main.css
+++ b/src/main.css
@@ -6,7 +6,7 @@
 
 :root {
   background-color: black;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Helvetica', sans-serif;
 }
 
 body {
