--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Helvetica Neue LT Pro md';
+  src: url('fonts/HelveticaNeueLTPro-Md.otf');
+}
+
 * {
   cursor: none !important;
   pointer-events: none !important;
@@ -6,7 +11,7 @@
 
 :root {
   background-color: black;
-  font-family: 'Helvetica', sans-serif;
+  font-family: 'Helvetica Neue LT Pro md', sans-serif;
 }
 
 body {
